Corrected some deprecated methods
New instance methods and Integer constructor